# pxu-gui

./: .gitignore  Cargo.toml  LICENSE  README.md  check.sh  index.html  pxu-gui.js  pxu_gui.js  pxu_gui_bg.wasm
.github/workflows/: pages.yml  rust.yml
data/: between-regions.ron  bs-3-min-1.ron  crossing-0a.ron  crossing-0b.ron  figures.ron  large-circle.ron  simple-path.ron  singlet-0.ron  singlet-min-1.ron  typical-bs-0-1.ron  typical-bs-0-2.ron  typical-bs-1.ron  typical-bs-min-1.ron  typical-bs-min-2.ron
interactive-figures/: Cargo.toml
interactive-figures/src/: lib.rs  main.rs
latex-figures/: Cargo.toml
latex-figures/data/: preimage-data.ron
latex-figures/src/: fig_compiler.rs  fig_writer.rs  figures.rs  main.rs  utils.rs
make-paths/: Cargo.toml
make-paths/src/: lib.rs  main.rs  path_provider.rs  paths.rs  provider.rs
plot/: Cargo.toml
plot/src/: lib.rs  plot.rs
presentation/: Cargo.toml
presentation/src/: app.rs  build.rs  main.rs  presentation_description.rs
pxu/: Cargo.toml
pxu-figures/: Cargo.toml
pxu-figures/src/: fig_writer.rs  figures.rs  utils.rs
pxu-gui/: Cargo.toml  index.html
pxu-gui/assets/: manifest.json
pxu-gui/src/: app.rs  arguments.rs  help.md  main.rs  plot.rs  ui_state.rs
pxu-plot/: Cargo.toml
pxu-plot/src/: lib.rs  plot.rs
pxu/src/: contours.rs  cut.rs  interpolation.rs  kinematics.rs  lib.rs  path.rs  point.rs  state.rs
