[workspace]
resolver = "2"
members = [
    "pxu",
    "latex-figures",
    "interactive-figures",
    "pxu-gui",
    "make-paths",
    "plot",
    "presentation",
]

[workspace.package]
version = "1.1.2"
authors = ["Olof Ohlsson Sax <olof.ohlsson.sax@gmail.com>"]
edition = "2021"
rust-version = "1.70"

[workspace.dependencies]
clap = "4.4.6"
base64 = "0.21.4"
itertools = "0.11.0"

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2


[patch.crates-io]

# If you want to use the bleeding edge version of egui and eframe:
# egui = { git = "https://github.com/emilk/egui", branch = "master" }
# eframe = { git = "https://github.com/emilk/egui", branch = "master" }

# If you fork https://github.com/emilk/egui you can test with:
# egui = { path = "../egui/crates/egui" }
# eframe = { path = "../egui/crates/eframe" }
