[package]
name = "interactive-figures"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
log = "0.4.6"
tracing-subscriber = "0.3"
tracing = "0.1.37"
itertools.workspace = true
num = "0.4.0"
pxu = { path = "../pxu" }
make-paths = { path = "../make-paths" }
indicatif = "0.17.3"
clap = { workspace = true, features = ["derive"] }
threadpool = "1.8.1"
ron = "0.8.0"
flate2 = "1.0.25"
serde = { version = "1", features = ["derive"] }
num_cpus = "1.15.0"


