[package]
name = "presentation"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
egui = "0.27.1"
eframe = { version = "0.27.1", default-features = false, features = [
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
] }
num = "0.4.0"
# You only need serde if you want app persistence:
serde = { version = "1", features = ["derive"] }
log = "0.4.6"
itertools.workspace = true
chrono = { version = "0.4", features = [
    "js-sys",
    "wasmbind",
    "clock",
    "std",
], default-features = false }

pxu = { path = "../pxu", features = ["egui"] }
plot = { path = "../plot" }
serde_json = "1.0.95"
serde_urlencoded = "0.7.1"
base64.workspace = true
flate2 = "1.0.25"
ron = "0.8.0"
image = { version = "0.24.6", default-features = false, features = ["png"] }
egui_extras = { version = "0.27.1", features = ["image"] }
toml = "0.8.2"
serde_with = "3.0.0"
clap = { workspace = true, features = ["derive"] }
thiserror = "1.0.40"
md5 = "0.7.0"


# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"
tracing = "0.1.37"
clap = { workspace = true, features = ["derive", "cargo"] }

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"
wasm-bindgen-futures = "0.4"
wasm-logger = "0.2.0"
web-sys = { version = "0.3.61", features = ["Window", "Document", "Location"] }
url = "2.3.1"
